# oximeter-rest-api

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: f47bfc2ff0b7_init_db.py
oximeter/: main.py
oximeter/api/: dependencies.py
oximeter/api/routes/: sensor.py
oximeter/core/: config.py
oximeter/db/: __init__.py  crud.py
oximeter/models/: __init__.py  sensor_data.py
oximeter/schemas/: __init__.py  sensor_data.py
tests/: conftest.py
tests/api/: test_sensor.py
tests/crud/: test_sensor_data.py
