[tool.poetry]
name = "oximeter-api"
version = "0.1.0"
description = ""
authors = ["LaBatata101 <labatata101@linuxmail.org>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.39"
uvicorn = "^0.18.2"
alembic = "^1.8.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "*"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
